# packed-term-arena

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: elephant.cfg
src/: lib.rs  main.rs  parser.rs  tree.rs  tree_parser.lalrpop
src/pcfg/: load.rs  mod.rs  parser.lalrpop
