[package]
name = "packed-term-arena"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Alexander Koller <akoller@gmail.com>"]
description = "Append-only arena storage for labeled terms and DAGs with stable child slices and bottom-up transformations"
license = "MIT"
readme = "README.md"
repository = "https://github.com/coli-saar/packed-term-arena"
homepage = "https://github.com/coli-saar/packed-term-arena"
documentation = "https://docs.rs/packed-term-arena/latest/packed_term_arena/"
keywords = ["tree", "arena", "dag", "term", "parser"]
categories = ["data-structures", "parsing"]
autobins = false
exclude = [
    "/.claude/",
    "/.idea/",
    "/outputs/",
    "/src/bin/",
    "/src/main.rs",
]

[lib]
name = "packed_term_arena"

[dependencies]
lalrpop-util = "0.23.1"

[build-dependencies]
lalrpop = "0.23.1"
